<resources>
    <string name="app_name">MQTT</string>
    <string name="server_url">Server URL</string>
    <string name="client_id">Client ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="clean">Clean</string>
    <string name="prefill">Prefill</string>
    <string name="connect">Connect</string>
    <string name="topic">Topic</string>
    <string name="message">Message</string>
    <string name="publish">Publish</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe">Subscribe</string>
</resources>