<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/topicInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/topic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topicEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/publishButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/publish" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newTopicInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/topic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newTopicEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/subscribeButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subscribe" />

        <Button
            android:id="@+id/unsubscribeButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe" />

        <Button
            android:id="@+id/cleanButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/clean" />

        <Button
            android:id="@+id/prefillButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/prefill" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/connect" />

    </LinearLayout>

</ScrollView>